# android-custom-kitchen

./: IMPROVEMENTS.md  README.md  android-custom-kitchen-gui.py  pyproject.toml  setup.sh
.github/workflows/: ci.yml
ackitchen/: __init__.py  adb.py  app.py  cli.py  entry.py  installers.py  main_window.py  pages.py  preflight.py  runner.py  settings_store.py  styles.py  widgets.py  workflows.py
ackitchen/pages/: __init__.py  about_page.py  apk_page.py  base.py  dashboard_page.py  firmware_page.py  setup_page.py
debian/: changelog  control
tests/: conftest.py  test_preflight.py  test_runner.py  test_settings_store.py  test_workflows.py
